# aivan

./: .env.example  .gitignore  AIVAN_COMPREHENSIVE_TEST_REPORT.md  AUDIT-DEFECTS-2026-06-28.md  CHANGELOG.md  DEFECTS-WECHAT-500-2026-06-29.md  LICENSE  OPENCLAW_AIVAN_AGENT_HARNESS_REGISTRATION_FIX_REPORT.md  README.md  RFQ_INTAKE_STRUCTURED_DB_TEST_REPORT.md  SECURITY.md  WECHAT-OPENCLAW-E2E-REPORT-2026-06-28.md  pyproject.toml  skill.json
data/: aiven.db-shm  aiven.db-wal  default_leadtime_profiles.json  sample_marketplace_suppliers.csv  sample_suppliers.csv
deploy/: aivan.production.env.example
docs/: CURRENT_ARCHITECTURE_STATUS.md  DEPLOYMENT_CTYUN.md  DEPLOY_OPENCLAW_AIVAN_SOP.md  GIRAFFE_INTERNAL_WORKING_LANGUAGE.md  GLTG_BEHAVIORAL_STATISTICAL_MODEL_ITERATION_PRD.md  IMPLEMENTATION_REPORT_PR19_PR22_CLEANUP.md  INTEGRATION_BOUNDARIES.md  LLM_PROVIDER_AND_OUTPUT_VALIDATION.md  PR20_REFACTOR_REQUIRED.md  SERVER_OPENCLAW_DEPLOYMENT.md  TENANT_AND_IDEMPOTENCY_GUARDRAILS.md
scripts/: benchmark_small_model_boundary.py  bootstrap_local.sh  check_unified_data_ids.py  deploy_giraffe.sh  inspect_inquiry_intake.py  openclaw_pairing_check.sh  run_aivan_e2e.py  run_aivan_marketplace_e2e.py  run_aivan_openclaw_full_check.py  run_aivan_openclaw_gateway_p0_test.py  run_aivan_openclaw_install_simulation.py  run_aivan_openclaw_install_smoke_test.py  run_aivan_openclaw_plugin_smoke_test.py  run_aivan_platform_whitelist_e2e.py  run_aivan_private_domain_rfq_e2e.py  run_aivan_prod_smoke.py  run_aivan_relay_e2e.py  run_aivan_reversal_e2e.py  run_aivan_unknown_supplier_risk_e2e.py  (+8 more)
(+327 files in other folders)
